Prepare the release of Otoroshi version 1.3.1
